nueva foto de bebe

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 	<img src="imagenesbebe/bebe8.jpg">
 	<img src="imagenesbebe/bebe9.jpg">
 	<img src="imagenesbebe/bebe10.jpg">
+  <img src="imagenesbebe/bebe10.jpg">
 
 
 </body>
